Fixing an alignment issue with the picture in the story section. Removing example HTML font files to get rid of the mixed content warning.

--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,13 @@
       align-self: center;
 }
 
+@media (min-width: 768px) {
+  #story-section picture {
+    -ms-grid-column-align: end;
+        justify-self: end;
+  }
+}
+
 #story-section picture .story-pic {
   width: 100%;
   max-width: 300px;
@@ -140,8 +147,6 @@
 
 @media (min-width: 768px) {
   #story-section picture .story-pic {
-    -ms-grid-column-align: end;
-        justify-self: end;
     max-width: 315px;
   }
 }
